inject jwt token using interceptor, implement the book-card, rating component, the pagination and borrow request
